[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cudo-compute"
version = "0.0.2"
authors = [
    { name = "Cudo Ventures", email = "dev@cudoventures.com" },
]
description = "A client for cudocompute.com"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "six>=1.0.0",
    "urllib3>=1.10.0",
]

[project.urls]
"Homepage" = "https://www.cudocompute.com"
"Bug Tracker" = "https://github.com/CudoVentures/cudo-compute-python-client/issues"